scripts/test_outputs/sample26out.txt
./cfiles/sample26.cpp:4:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:7:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:10:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:13:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:16:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:19:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:22:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:25:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:28:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:31:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:34:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:37:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:40:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:43:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:85:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:88:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:91:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:94:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:97:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:100:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:103:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:106:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:109:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:112:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:115:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:118:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:121:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:124:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:127:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:130:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:133:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:136:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:139:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./cfiles/sample26.cpp:141:5: error: redefinition of 'x'
int x =  0 ;
    ^
./cfiles/sample26.cpp:140:16: note: previous definition is here
int helper(int x) {
               ^
./cfiles/sample26.cpp:142:9: error: cannot initialize return object of type 'int' with an lvalue of type 'const char [5]'
return  "help"  ;
        ^~~~~~
./cfiles/sample26.cpp:146:8: error: redefinition of 'x'
double x = 0.000000;
       ^
./cfiles/sample26.cpp:145:20: note: previous definition is here
void helper(double x) {
                   ^
./cfiles/sample26.cpp:147:1: error: void function 'helper' should not return a value [-Wreturn-type]
return  "help"  ;
^       ~~~~~~
./cfiles/sample26.cpp:150:9: error: cannot initialize return object of type 'int' with an lvalue of type 'const char [5]'
return  "help"  ;
        ^~~~~~
33 warnings and 5 errors generated.
